Discard non-positive RTT observations in socket watcher

In some cases, reading RTT from TCP socket may (incorrectly) give a 
value of 0 milliseconds. Discard these spurious values which may
affect accuracy.

Bug: 759253
Cq-Include-Trybots: master.tryserver.chromium.android:android_cronet_tester
Change-Id: I423a82054c6c0238a88729575fdf8e4350e38293
Reviewed-on: https://chromium-review.googlesource.com/636772
Reviewed-by: Ryan Sturm <ryansturm@chromium.org>
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#497809}
Former-commit-id: 937ca7a5bcddbf1112bbf7c3b34df02900f86108